--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,10 +8,44 @@ trigger:
 
 pool:
   vmImage: ubuntu-latest
+  demands:
+  - npm
 
 variables:
   buildConfiguration: 'Release'
 
 steps:
-- script: dotnet build --configuration $(buildConfiguration)
-  displayName: 'dotnet build $(buildConfiguration)'
+- task: UseDotNet@2
+ displayName: 'Use .Dot NetCore SDK 3.1.300'
+ inputs:
+   packageType: sdk
+   version: 3.1.300
+
+
+- task: Npm@1
+  displayName: 'Run Npm Install' 
+  inputs:
+  verbose: 'false'  
+
+- script: './node_modules/.bin/node-sass Tailspin.SpaceGame.Web/wwwroot --output Tailspin.SpaceGame.Web/wwwroot'
+  displayName: 'Compile SaaS Assets'
+
+- task: gulp@1
+  displayName: 'Run gulp tasks'
+
+- script: 'echo "$(Build.DefinitionName) , $(Build.BuildID) , $(Build.BuildNumber)" >buildinfo.txt'
+  displayName: 'Write Build Info'
+  workingDirectory: Tailspin.SpaceGame.Web/wwwroot
+
+- task: DotNetCoreCLI@2
+  displayName: 'Restore project dependencies'
+  inputs:
+    command: 'restore'
+    projects: '**/*.csproj'
+
+- task: DotNetCoreCLI@2
+  displayName: 'Build the project - Release'
+  inputs:
+    command: 'build'
+    arguments: '--no-restore --configuration Release'
+    projects: '**/*.csproj'
